--- a/freelancer-ap-frontend/src/index.css
+++ b/freelancer-ap-frontend/src/index.css
@@ -42,6 +42,28 @@
   }
 }
 
+/*----------TagInput--------- */
+.rti--container {
+  background-color: rgb(var(--color-secondary-100));
+  --rti-radius: 0.375rem;
+  --rti-s: 0.5rem;
+  --rti-tag: #edf2f7;
+  --rti-tag-remove: #e53e3e;
+  border: none;
+}
+.rti--container .rti--input {
+  background-color: rgb(var(--color-secondary-200));
+  color: rgb(var(--color-secondary-800));
+  padding: 0.3rem 1rem;
+  border-radius: 0.5rem;
+}
+
+.rti--tag {
+  background-color: rgb(var(--color-secondary-500));
+  color: rgb(var(--color-secondary-100));
+}
+
+/* --------------------- */
 @layer components{
   .textFiled__input{
     @apply w-full py-3 px-4 rounded-xl text-secondary-900 border border-secondary-100
@@ -58,6 +80,12 @@
   }
   .btn--secondary{
     @apply bg-secondary-500 text-secondary-100
+  }
+  .btn--outline {
+    @apply border border-secondary-700 text-secondary-700;
+  }
+  .btn--danger {
+    @apply border border-rose-700 text-rose-700 px-3 rounded-xl;
   }
   .badge {
     @apply inline-block whitespace-nowrap rounded-xl px-3 py-0.5;
@@ -108,10 +136,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
+
 }
 
 table .title-row {
-  background-color: rgb(var(--color-secondary-100));
+  background-color: rgb(var(--color-secondary-200));
  
 }
 
